# compacto

./: .readthedocs.yaml  README.md  pyproject.toml
.githooks/: pre-commit-config.yaml
.github/workflows/: build.yml
compacto/: __init__.py  encoding_headers.py  internal_types.py  serialization.py  struct_parser.py
compacto/encoding/: __init__.py  bool_encoder.py  bytes_encoder.py  field_encoder.py  float_encoder.py  hashmap_encoder.py  int_encoder.py  list_encoder.py  object_encoder.py  optional_encoder.py  string_encoder.py  type_encoder.py
compacto/utils/: annotations.py  constants.py  exceptions.py  tree_node.py
docs/: Makefile
docs/source/: compacto.encoding.rst  compacto.rst  compacto.utils.rst  conf.py  index.rst  modules.rst  protocol.rst
tests/: conftest.py  test_encoding_headers.py  test_serialization.py  test_struct_parser.py
tests/encoding/: test_bool_encoder.py  test_bytes_encoder.py  test_field_encoder.py  test_float_encoder.py  test_hashmap_encoding.py  test_int_encoder.py  test_list_encoder.py  test_object_encoder.py  test_optional_encoder.py  test_string_encoder.py  test_type_encoder.py
tests/utils/: test_constants.py  test_exceptions.py
