[project]
name = "compacto"
dynamic = ["version"]
description = "Compacto - A Python library for facilitating C structs representation via type annotations"
requires-python = ">=3.10,<4.0"
maintainers = [
    { name = "Vitor Hideyoshi", email = "vitor.h.n.batista@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
readme = "README.md"
dependencies = [
    "typing-extensions>=4.15.0",
]


# Build System
[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]


# Tests
[tool.coverage.run]
omit = [
    "tests/*",
]


# Linters
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["compacto"]
section-order=[
    "future",
    "first-party",
    "local-folder",
    "third-party",
    "standard-library",
]
lines-after-imports = 2


[tool.pyright]
venvPath = "."
venv = ".venv"
